--- a/src/app/informations/neige/neige.component.html
+++ b/src/app/informations/neige/neige.component.html
@@ -3,31 +3,31 @@
         <GridLayout backgroundColor="white" class="encadre" borderRadius="10%" marginTop="2vh" marginBottom="25%" marginLeft="5%"
             marginRight="5%" rows="50,30" columns="*,*">
             <Label color="black" class="page__content-placeholder" text="CHUTE DE NEIGE" row="0" column="0"
-                fontSize="15px" fontWeight="Bold"></Label>
-            <!-- <Image row="0" column="1" src=""></Image> -->
+            fontSize="20em"  fontWeight="Bold"></Label>
+            <Label row="0" column="1" class="neige" text="A"></Label> 
             <Label color="black" class="page__content-placeholder" text="Prevision" row="1" column="0"
-                fontWeight="Bold"></Label>
-            <Label color="black" class="page__content-placeholder" text="5cm" row="1" column="1"></Label>
+                fontSize="15em"></Label>
+            <Label color="black" class="page__content-placeholder" fontSize="15em" text="5cm" row="1" column="1"></Label>
         </GridLayout>
         <GridLayout backgroundColor="white" class="encadre" borderRadius="10%" marginTop="2vh"marginBottom="25%" marginLeft="5%"
             marginRight="5%" rows="50,30,30,30" columns="*,*,*">
             <Label color="black" class="page__content-placeholder" text="HAUTEUR DE NEIGE" row="0" column="0"
-                colspan="2" fontSize="15px" fontWeight="Bold"></Label>
+                colspan="2" fontSize="20em" fontWeight="Bold"></Label>
 
-            <!-- <Image row="1" column="0" colspan="2" rowspan="3" src="~/images/logo_montagne.png"></Image> -->
-            <Label color="black" class="page__content-placeholder" text="300cm|2500m" fontSize="15px" row="1" column="3"
+             <Label row="1" column="0" colspan="2" rowspan="3" class="iconemont" text="A"></Label> 
+            <Label color="black" class="page__content-placeholder" text="300cm|2500m" fontSize="15em" row="1" column="3"
                 fontWeight="Bold"></Label>
-            <Label color="black" class="page__content-placeholder" text="180cm|1800m" fontSize="15px"row="2" column="3"
+            <Label color="black" class="page__content-placeholder" text="180cm|1800m" fontSize="15em"row="2" column="3"
                 fontWeight="Bold"></Label>
-            <Label color="black" class="page__content-placeholder" text="90cm|1600m" fontSize="15px" row="3" column="3"
+            <Label color="black" class="page__content-placeholder" text="90cm|1600m" fontSize="15em" row="3" column="3"
                 fontWeight="Bold"></Label>
         </GridLayout>
         <GridLayout backgroundColor="white" class="encadre" borderRadius="10%" marginTop="2vh" marginBottom="25%" marginLeft="5%"
             marginRight="5%" rows="50,30,30,30" columns="*,*,*">
-            <Label color="black" class="page__content-placeholder" text="RISQUE AVALANCHE" fontSize="15px" row="0"
+            <Label color="black" class="page__content-placeholder" text="RISQUE AVALANCHE" fontSize="20em" row="0"
                 column="0" colspan="2" fontWeight="Bold"></Label>
-            <!-- <Image row="1" column="3"  src=""></Image> 
-            <Image row="1" column="0" colspan="3"  src=""></Image> -->
+            
+            <!-- <Image row="1" column="0" colspan="3"  src="https://www.afnor.org/wp-content/uploads/2017/01/limit%C3%A9-150x150.jpg"></Image>  -->
 
             <Label color="black" class="page__content-placeholder" text="Risque:2/5" row="2" column="1"
                 fontWeight="Bold"></Label>
