--- a/src/app/sos/etat/etat.component.html
+++ b/src/app/sos/etat/etat.component.html
@@ -9,24 +9,23 @@
             <Label backgroundColor="#3E3F32" class="page__content-placeholder" text="" marginTop="50%"
                 row="2" color="white" fontSize=25px; fontWeight="Bold" marginbottom="10%" marginLeft="100%"></Label>
 
-            <Label backgroundColor="#3E3F32" class="page__content-placeholder" text="La victime est un" marginTop="50%"
+            <Label backgroundColor="#3E3F32" class="page__content-placeholder" text="Le blessé est :" marginTop="50%"
                 row="3" color="white" fontSize=25px; fontWeight="Bold" marginbottom="10%" marginLeft="10%"></Label>
-            <ContentView [nsRouterLink]="['/sos/gravite']" row="4" textAlign="center" class="bouttonchute"text="" width="400px" height="400px" marginLeft="5%"
+            <ContentView [nsRouterLink]="['/sos/gravite']" row="4" textAlign="center" class="bouttonchute"text="" width="150em" height="150em" marginLeft="5%"
                 color="white" backgroundColor="#FF0000">
-                <Label class="page__content-placeholder" text="VICTIME" [nsRouterLink]="['/sos/gravite']" (tap)="etatsos('etat')"color="white" fontSize=25px; fontWeight="Bold"
+                <Label class="page__content-placeholder" text="VICTIME" [nsRouterLink]="['/sos/gravite']" (tap)="etatsosVictime('Victime')"color="white" fontSize="25em" fontWeight="Bold"
                     marginbottom="10%" marginLeft="0%"></Label>
             </ContentView>
-            <ContentView row="4" text="" [nsRouterLink]="['/sos/gravite']" class="bouttonchute"width="400px" height="400px" color="white" textAlign="center"
+            <ContentView row="4" text="" [nsRouterLink]="['/sos/gravite']" class="bouttonchute"width="150em" height="150em" color="white" textAlign="center"
                 marginLeft="0%" backgroundColor="#106D0E">
 
-                <Label class="page__content-placeholder" [nsRouterLink]="['/sos/gravite']" (tap)="etatsos('etat')"text="TEMOIN" color="white" fontSize=25px; fontWeight="Bold"
+                <Label class="page__content-placeholder" [nsRouterLink]="['/sos/gravite']" (tap)="etatSosTemoin('Temoin')"text="TEMOIN" color="white" fontSize="25em" fontWeight="Bold"
                     marginbottom="10%" marginLeft="0%"></Label>
             </ContentView>
         </FlexboxLayout>
     </GridLayout>
     
 </ScrollView>
-
 
 
 <!-- <GridLayout class="search__page__content">
