--- a/src/app/sos/gravite/gravite.component.html
+++ b/src/app/sos/gravite/gravite.component.html
@@ -1,71 +1,42 @@
+
+
+
 <ScrollView orientation="vertical">
-    <GridLayout class="pagecontent" backgroundColor="#3E3F32" rows="60,60,60,60,60,60,60,60" columns=",">
+    <GridLayout class="page__content" backgroundColor="#3E3F32" rows="40,40,40,40,40,40,40,40,40,40,100" columns="*,*,*">
 
-        <Label class="pagecontent-placeholder" text="SEVERES" row="0" column="0" colspan="2" color="white"
-            fontWeight="Bold" (tap)="gravitesos('gravite')"></Label>
-        <StackLayout class="hr" row="1" colspan="2"></StackLayout>
+        <Switch checked="true" row="0" column="0" [(ngModel)]="bool" class="switch"></Switch>
+        <Label class="page__content-placeholder" text="SEVERES" fontSize="20em" row="0" column="1" colspan="2" color="white"
+            fontWeight="Bold"></Label>
+         <Label text="Sauvegarder" (tap)="saveetat1()" class="btn btn-primary" row="1" column="1" color="white"></Label>
+        <Label text="Effacer" (tap)="removeBoolean()" class="btn btn-primary" row="1" column="2" color="white"></Label>
+     <StackLayout class="hr" row="2" colspan="3"></StackLayout>
 
-        <Label class="pagecontent-placeholder" text="SERIEUSES" row="2" column="0" colspan="2" color="white"
-            fontWeight="Bold" (tap)="gravitesos('gravite')"></Label>
-        <StackLayout class="hr" row="3" colspan="2"></StackLayout>
+     <Switch checked="true" row="3" column="0" [(ngModel)]="bool" class="switch"></Switch>
+        <Label class="page__content-placeholder" text="SERIEUSES" fontSize="20em" row="3" column="1" colspan="2" color="white"
+            fontWeight="Bold"></Label>
+         <Label text="Sauvegarder" (tap)="saveetat2()" class="btn btn-primary" row="4" column="1" color="white"></Label>
+        <Label text="Effacer" (tap)="removeBoolean()" class="btn btn-primary" row="4" column="2" color="white"></Label>
+     <StackLayout class="hr" row="5" colspan="3"></StackLayout>
 
-        <Label class="pagecontent-placeholder" text="MODEREES" row="4" column="0" colspan="2" color="white"
-            fontWeight="Bold" (tap)="gravitesos('gravite')"></Label>
-        <StackLayout class="hr" row="5" colspan="3"></StackLayout>
-
-
-        <Label class="page__content-placeholder" text="LEGERES" row="6" column="0" colspan="2" color="white"
-            fontWeight="Bold" (tap)="gravitesos('gravite')"></Label>
-        <StackLayout class="hr" row="7" colspan="3"></StackLayout>
+     <Switch checked="true" row="6" column="0" [(ngModel)]="bool" class="switch"></Switch>
+        <Label class="page__content-placeholder" text="MODEREES" fontSize="20em" row="6" column="1" colspan="2" color="white"
+            fontWeight="Bold"></Label>
+         <Label text="Sauvegarder" (tap)="saveetat3()" class="btn btn-primary" row="7" column="1" color="white"></Label>
+        <Label text="Effacer" (tap)="removeBoolean()" class="btn btn-primary" row="7" column="2" color="white"></Label>
+     <StackLayout class="hr" row="8" colspan="3"></StackLayout>
+     
+     <Switch checked="true" row="9" column="0" [(ngModel)]="bool" class="switch"></Switch>
+        <Label class="page__content-placeholder" text="LEGERES" fontSize="20em" row="9" column="1" colspan="2" color="white"
+            fontWeight="Bold"></Label>
+         <Label text="Sauvegarder" (tap)="saveetat4()" class="btn btn-primary" row="10" column="1" color="white"></Label>
+        <Label text="Effacer" (tap)="removeBoolean()" class="btn btn-primary" row="10" column="2" color="white"></Label>
+     <StackLayout class="hr" row="11" colspan="3"></StackLayout>
+        
     </GridLayout>
 
 
 </ScrollView>
 <GridLayout>
-    <Button text="Envoyer" [nsRouterLink]="['/sos/appel']" backgroundColor="#0DF24D" color="white" 
-        fontSize="Large" class="soumission" marginTop="90%" marginBottom="5%"></Button>
+    <Button text="Envoyer" [nsRouterLink]="['/sos/appel']" backgroundColor="#0DF24D" color="white" (tap)="removeAll()"
+        fontSize="Large" class="soumission" marginTop="90%"></Button>
 </GridLayout>
-
-
-
-
-
-
-
-<!-- <ScrollView orientation="vertical">
-    <GridLayout class="page__content" backgroundColor="#3E3F32" rows="60,60,60,60,60,60,60,60"columns="*,*,*"> -->
-       <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
-           class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
-           (tap)="changeAction()" >
-       </Label>  -->
-       <!-- <Switch checked="true"row="0" column="0"></Switch>
-       <Label class="page__content-placeholder" text="SEVERES" row="0" column="1" colspan="2" color="white"fontWeight="Bold"></Label>
-       <StackLayout class="hr" row="1"colspan="3"></StackLayout> -->
-       <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
-           class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
-           (tap)="changeAction()"row="2" column="1" >
-       </Label>  -->
-       <!-- <Switch checked="true"row="2" column="0"></Switch>
-       <Label class="page__content-placeholder" text="SERIEUSES" row="2" column="1" colspan="2"color="white"fontWeight="Bold"></Label>
-       <StackLayout class="hr" row="3"colspan="3"></StackLayout> -->
-       <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
-           class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
-           (tap)="changeAction()"row="4" column="1" >
-       </Label>  -->
-       <!-- <Switch checked="true"row="4" column="0"></Switch>
-       <Label class="page__content-placeholder" text="MODEREES" row="4" column="1" colspan="2"color="white"fontWeight="Bold"></Label>
-       <StackLayout class="hr" row="5"colspan="3"></StackLayout> -->
-       <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
-           class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
-           (tap)="changeAction()"row="6" column="1" >
-       </Label>  -->
-       <!-- <Switch checked="true"row="6" column="0"></Switch>
-       <Label class="page__content-placeholder" text="LEGERES" row="6" column="1" colspan="2"color="white"fontWeight="Bold"></Label>
-       <StackLayout class="hr" row="7"colspan="3"></StackLayout>
-   </GridLayout>  -->
-   
-    
-   <!-- </ScrollView> <GridLayout>
-     <Button text="Envoyer" [nsRouterLink]="['/sos/appel']" backgroundColor="#0DF24D" color="white" (tap)="submit()" fontSize="Large"
-   class="soumission" marginTop="100%"></Button>
-   </GridLayout> -->
