sauvegarde du vendredi 16 Mai

--- a/src/app/carnet/carnetrempli/carnetrempli.component.html
+++ b/src/app/carnet/carnetrempli/carnetrempli.component.html
@@ -26,15 +26,15 @@
                     <Label col="1" [text]="carnetServ.dossierSante.donneur" class="groupe_sanguin"></Label>
                 </GridLayout>
                 <GridLayout columns="auto, *">
-                    <Label col="0" class="infosCarnet" text="Allergie(s) :"></Label>
+                    <Label col="0" class="infosCarnet" text="Allergie(s) :" textWrap="true"></Label>
                     <Label col="1" [text]="carnetServ.dossierSante.allergie" class="groupe_sanguin"></Label>
                 </GridLayout>
                 <GridLayout columns="auto, *">
-                    <Label col="0" class="infosCarnet" text="Pathologie(s):"></Label>
+                    <Label col="0" class="infosCarnet" text="Pathologie(s):"textWrap="true"></Label>
                     <Label col="1" [text]="carnetServ.dossierSante.pathologie" class="groupe_sanguin"></Label>
                 </GridLayout>
                 <GridLayout columns="auto, *">
-                    <Label col="0" class="infosCarnet" text="Traitement(s) :"></Label>
+                    <Label col="0" class="infosCarnet" text="Traitement(s) :"textWrap="true"></Label>
                     <Label col="1" [text]="carnetServ.dossierSante.traitement" class="groupe_sanguin"></Label>
                 </GridLayout>
                 <GridLayout columns="auto, *">
