--- a/src/app/danger/confirmation-envoi/confirmation-envoi.component.html
+++ b/src/app/danger/confirmation-envoi/confirmation-envoi.component.html
@@ -2,7 +2,7 @@
     <Label class="blackPage" text="SIGNALEMENT ENVOYE !"></Label>
 </ActionBar> -->
 
-<StackLayout rows="15, 260, 360">
+<StackLayout rows="15, 260, 360"marginBottom="12%">
 
     <Label text="SIGNALEMENT ENVOYE !" class="un"></Label>
 
