--- a/src/app/danger/photo/photo.component.html
+++ b/src/app/danger/photo/photo.component.html
@@ -84,7 +84,7 @@
         <GridLayout  col="0" #tabHighlight>
         </GridLayout>
         <GridLayout col="0" backgroundColor="#000000">
-            <Label text="Sauver dans galerie" color="#FFFF00" ></Label>
+            <Label text="sauver dans galerie" color="#FFFF00" ></Label>
             <Switch [(ngModel)]="saveToGallery" color="#FFFFFF"></Switch>
         </GridLayout>
         <GridLayout col="1" backgroundColor="#000000">
@@ -97,7 +97,7 @@
 </GridLayout>
 <GridLayout>
     <!-- <Label text="Effacer l'image" color="#000000" ></Label>   -->
-    <Image row="1" [src]="cameraImage" stretch="fill" width="300rem" height="440rem" margin="20rem"></Image>  
+    <Image row="1" [src]="cameraImage" stretch="fill" width="300rem" height="350rem" margin="20rem"></Image>  
 </GridLayout> 
 </StackLayout>
 </ScrollView>  
