--- a/src/app/danger/recapitulatif/recapitulatif.component.html
+++ b/src/app/danger/recapitulatif/recapitulatif.component.html
@@ -1,5 +1,5 @@
 <ScrollView> 
-<GridLayout rows="240, 20, 40, 50, 50, 50, 100, 50, *,*,*">
+<GridLayout rows="240, 20, 40, 50, 50, 50, 100, 50, *,*,*" marginBottom="5%">
     <ContentView row="0" class="danger_button" text="" width="240vw" height="300vh" backgroundColor="#000000"></ContentView> 
     <Label row="1" text="ENVOYER" id="envoyer"></Label>
     <Label row="2" [nsRouterLink]="['/danger/confirmationEnvoi']" text="&#xf064;" class="nt-icon fas" id="fleche_envoi"></Label> 
@@ -13,8 +13,8 @@
     <Label row="5" text="Longitude: 2.44583129" color="#000000" fontSize="30px"></Label> -->
     <Label row="7" text="Photo (obligatoire)" backgroundColor="#000000" color="#F8FD07" fontSize="30px"></Label>
     <Image row="8" class="galerie" src="https://www.telegraph.co.uk/content/dam/Travel/ski/Crans-Montana-avalanche-skiers-KEYSTONE-ANTHONY%20ANEX.jpg?imwidth=450"  width="800px" stretch="aspectFit"></Image>
-    <Image row="9" class="galerie" src="https://www.telegraph.co.uk/content/dam/Travel/ski/Crans-Montana-avalanche-skiers-KEYSTONE-ANTHONY%20ANEX.jpg?imwidth=450"  width="800px" stretch="aspectFit"></Image>
-    <Image row="10" class="galerie_end" src="https://www.telegraph.co.uk/content/dam/Travel/ski/Crans-Montana-avalanche-skiers-KEYSTONE-ANTHONY%20ANEX.jpg?imwidth=450"  width="800px" stretch="aspectFit"></Image>
+    <!-- <Image row="9" class="galerie" src="https://www.telegraph.co.uk/content/dam/Travel/ski/Crans-Montana-avalanche-skiers-KEYSTONE-ANTHONY%20ANEX.jpg?imwidth=450"  width="800px" stretch="aspectFit"></Image>
+    <Image row="10" class="galerie_end" src="https://www.telegraph.co.uk/content/dam/Travel/ski/Crans-Montana-avalanche-skiers-KEYSTONE-ANTHONY%20ANEX.jpg?imwidth=450"  width="800px" stretch="aspectFit"></Image> -->
 </GridLayout>
 </ScrollView> 
 <FlexboxLayout flexDirection="row" justifyContent="space-around" alignItems="flex-end" class="slider">
