--- a/src/app/sos/etat/etat.component.html
+++ b/src/app/sos/etat/etat.component.html
@@ -9,8 +9,8 @@
             <Label backgroundColor="#3E3F32" class="page__content-placeholder" text="" marginTop="50%"
                 row="2" color="white" fontSize=25px; fontWeight="Bold" marginbottom="10%" marginLeft="100%"></Label>
 
-            <Label backgroundColor="#3E3F32" class="page__content-placeholder" text="Le blessé est :" marginTop="50%"
-                row="3" color="white" fontSize=25px; fontWeight="Bold" marginbottom="10%" marginLeft="10%"></Label>
+            <Label backgroundColor="#3E3F32" class="page__content-placeholder" text="vous êtes :" marginTop="50%"
+                row="3" color="white" fontSize="50em" fontWeight="Bold" marginbottom="10%" marginLeft="10%"></Label>
             <ContentView [nsRouterLink]="['/sos/gravite']" row="4" textAlign="center" class="bouttonchute"text="" width="150em" height="150em" marginLeft="5%"
                 color="white" backgroundColor="#FF0000">
                 <Label class="page__content-placeholder" text="VICTIME" [nsRouterLink]="['/sos/gravite']" (tap)="etatsosVictime('Victime')"color="white" fontSize="25em" fontWeight="Bold"
