--- a/src/app/danger/fiche-signalement/fiche-signalement.component.html
+++ b/src/app/danger/fiche-signalement/fiche-signalement.component.html
@@ -43,7 +43,7 @@
         <GridLayout  col="0" #tabHighlight>
         </GridLayout>
         <GridLayout col="0" backgroundColor="#000000">
-            <Label [nsRouterLink]="['/utilisateur/choixstation']" col="0" row="0" text="&#xf015;" class="nt-icon fas"  textAlign="center" verticalAlignment="center" horizontalAlignment="center"></Label>
+            <Label [nsRouterLink]="['/utilisateur/station']" col="0" row="0" text="&#xf015;" class="nt-icon fas"  textAlign="center" verticalAlignment="center" horizontalAlignment="center"></Label>
             <!-- <Image #image1 src="~/app/images/infos.png" height="60" width="60"></Image> -->
         </GridLayout>   
     </GridLayout>
